clojure: update